@@ -1,0 +1,13 @@
+class Const:
+    DB_PATH = 'words.db'
+
+class ReviewConst:
+    REVIEW_PATH = r'miscellaneous/review/'
+    DAILY_REVIEW_FOLDER = r'daily_review/'
+
+    TMP_PATH = r'tmp/'
+
+    NUM_REVIEW = 100
+
+    WEEK_REVIEW_FILE_NAME = 'week_review.csv'
+    WEEK_COCA_REVIEW_FILE_NAME = 'week_coca_review.csv'
